--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,20 @@
-
-body, p, h1, h2, h3, h4 {
+body,
+p,
+h1,
+h2,
+h3,
+h4 {
     font-family: 'Roboto', sans-serif;
     text-align: center;
     text-size-adjust: 15px;
+    text-decoration: none;
+}
+
+body, h1 {
+
+    font-weight: bold; 
+            transition: transform 0.3s ease-in-out; 
+
 }
 
 
@@ -13,7 +25,7 @@ nav {
 
 nav img {
     float: left;
-    height: 40px; 
+    height: 40px;
     margin-right: 20px;
 }
 
@@ -36,8 +48,13 @@ nav ul li a {
 
 
 #home {
-    background-color: brown;
+    background-color: rgb(88, 87, 86);
     padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centra los elementos horizontalmente */
+    justify-content: center; /* Centra los elementos verticalmente */
+    text-align: center; /* Alinea el texto al centro */
 }
 
 
@@ -52,12 +69,25 @@ nav ul li a {
 
 
 #contact {
-    background: #114171;
+    background-color: brown;
     color: white;
     padding: 50px;
 }
 
-/* Footer */
+#avion {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        top: 50%;
+        left: 0; 
+        transform: translate(-50%, -50%);
+        margin-top: 200px;
+        
+    
+}
+
+
 footer {
     background-color: black;
     color: white;
