--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,15 @@ h3,
 h4 {
     font-family: 'Roboto', sans-serif;
     text-align: center;
-    text-size-adjust: 15px;
+    font-size: 25px;
     text-decoration: none;
 }
 
-body, h1 {
+body,
+h1 {
 
-    font-weight: bold; 
-            transition: transform 0.3s ease-in-out; 
+    font-weight: bold;
+    transition: transform 0.3s ease-in-out;
 
 }
 
@@ -52,9 +53,9 @@ nav ul li a {
     padding: 50px;
     display: flex;
     flex-direction: column;
-    align-items: center; 
-    justify-content: center; 
-    text-align: center; 
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 
@@ -72,20 +73,20 @@ nav ul li a {
     background-color: brown;
     color: white;
     padding: 50px;
-    
+
 }
 
 #avion {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        top: 50%;
-        left: 0; 
-        transform: translate(-50%, -50%);
-        margin-top: 200px;
-        
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 50%;
+    left: 0;
+    transform: translate(-50%, -50%);
+    margin-top: 200px;
+
+
 }
 
 
@@ -100,26 +101,39 @@ footer {
 /* media query index*/
 
 /*moviles*/
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 250px) and (max-width: 768px) {
     nav img {
-        height: 30px; 
-        margin-right: 10px; 
+        height: 30px;
+        margin-right: 10px;
     }
     
     nav ul li {
-        margin-right: 10px; 
+        margin-right: 10px;
     }
     
     #home {
-        padding: 30px; 
+        padding: 30px;
     }
     
     #contact {
-        padding: 30px; 
+        padding: 30px;
     }
     
     #avion {
-        margin-top: 30px; 
+        margin-top: 30px;
+    }
+
+    #carouselDestinations .carousel-item img {
+        height: auto;
+        max-width: 100%;
+    }
+    
+    #carouselDestinations .carousel-item {
+        height: auto;
+    }
+    
+    #carouselDestinations .carousel-caption {
+        display: none; 
     }
 }
 
@@ -127,23 +141,23 @@ footer {
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
     nav img {
-        height: 35px; 
-        margin-right: 15px; 
+        height: 35px;
+        margin-right: 15px;
     }
-    
+
     nav ul li {
-        margin-right: 15px; 
+        margin-right: 15px;
     }
-    
+
     #home {
-        padding: 40px; 
+        padding: 40px;
     }
-    
+
     #contact {
-        padding: 40px; 
+        padding: 40px;
     }
-    
+
     #avion {
-        margin-top: 40px; 
+        margin-top: 40px;
     }
 }
