--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,9 @@ nav ul li a {
 
 
 #home {
-    background-color: rgb(88, 87, 86);
+    background-image: url(https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/446a58bc-ba29-4ac5-8575-c24837165044/Fondo-Banner%20%2812%29.jpg?w=1920&h=500&fit=crop&auto=format&q=60&fm=jpg);
+    background-attachment: fixed;
+    background-size: cover;
     padding: 50px;
     display: flex;
     flex-direction: column;
@@ -73,6 +75,7 @@ nav ul li a {
     background-color: brown;
     color: white;
     padding: 50px;
+    
 
 }
 
@@ -88,6 +91,24 @@ nav ul li a {
 
 
 }
+
+#carouselDestinations {
+    border: 5px solid #4e4949; 
+    border-radius: 5px; 
+    overflow: hidden; 
+    margin-bottom: 0.5px; 
+}
+
+
+#carouselDestinations .carousel-item img {
+    
+    max-width: 100%;
+}
+
+#carouselDestinations .carousel-item {
+    height: auto;
+}
+
 
 
 footer {
