--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,11 @@ h4 {
     text-decoration: none;
 }
 
+.hamburger {
+    display: none; 
+    
+}
+
 body,
 h1 {
 
@@ -115,6 +120,123 @@ nav ul li a {
 footer {
     background-color: black;
     color: white;
-    padding: 20px;
+    padding: 80px;
     text-align: center;
+    height: auto;
 }
+
+@media screen and (min-width: 375px) and (max-width: 1366px) {
+    
+    body,
+    p,
+    h1,
+    h2,
+    h3,
+    h4 {
+        font-size: 10px; 
+        margin: 1px; 
+    }
+
+    nav img {
+        height: 30px; 
+    }
+
+    nav ul {
+        flex-direction: column; 
+        padding: 0; 
+    }
+
+    nav ul li {
+        margin: 10px 0; 
+    }
+
+    nav ul li a {
+        padding: 10px; 
+    }
+
+    #carouselDestinations .carousel-item img {
+        max-width: 100%;
+        height: 180px;
+    }
+
+    #home {
+        padding: 30px;
+    }
+
+    #home h2,
+    #home h3:nth-of-type(2) {
+        display: none;
+    }
+
+
+    #avion {
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    .menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 35%;
+        font-size: 9px;
+        overflow-y: auto;
+        background-color: rgba(0, 0, 0, 0.8);
+        padding: 20px;
+        box-sizing: border-box;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease;
+        margin-top: 1px; 
+        padding-top: 0; 
+        z-index: 1000;
+    }
+
+    .menu.active {
+        transform: translateX(0);
+    }
+
+    .menu li {
+        display: block;
+        margin-bottom: 5px;
+    }
+
+    .menu li a {
+        display: block;
+        color: #fff;
+        text-decoration: none;
+        padding: 5px 0;
+        font-size: 14px;
+    }
+
+    
+    .hamburger-menu {
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; 
+        align-items: center; 
+        width: 25px;
+        height: 20px;
+        z-index: 1000;
+        position: relative;
+    }
+
+    .bar {
+        width: 100%;
+        height: 2px;
+        background-color: white;
+        margin: 2px 0; 
+    }
+}
+
+
+
+
+
+
+
+
+
+
