--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ h4 {
     text-decoration: none;
 }
 
+
 .hamburger {
     display: none; 
     
@@ -120,13 +121,21 @@ nav ul li a {
 footer {
     background-color: black;
     color: white;
-    padding: 80px;
+    padding: 10px;
     text-align: center;
     height: auto;
 }
 
 @media screen and (min-width: 375px) and (max-width: 1366px) {
     
+    nav {
+
+        padding: 60px;
+        position: relative;
+    }
+
+
+
     body,
     p,
     h1,
@@ -135,7 +144,9 @@ footer {
     h4 {
         font-size: 10px; 
         margin: 1px; 
+        margin-top: 5px;
     }
+
 
     nav img {
         height: 30px; 
@@ -151,16 +162,30 @@ footer {
     }
 
     nav ul li a {
-        padding: 10px; 
+        padding: 50px; 
     }
 
     #carouselDestinations .carousel-item img {
         max-width: 100%;
         height: 180px;
+        
+    }
+
+    #destinations {
+
+        max-width: 100%;
+        height: 180px;
+
+        
+    }
+
+    #contact {
+
+        padding: 50px;
     }
 
     #home {
-        padding: 30px;
+        padding: 120px;
     }
 
     #home h2,
@@ -168,14 +193,20 @@ footer {
         display: none;
     }
 
-
     #avion {
         display: none;
     }
 
+   .footer {
+
+    padding: 50px;
+
+   }
 }
 
-@media screen and (max-width: 768px) {
+
+
+@media screen and (max-width: 1366px) {
     .menu {
         position: fixed;
         top: 0;
