actualización imágen de fondo

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ nav ul li a {
 
 
 #home {
-    background-image: url(https://img.freepik.com/foto-gratis/naturaleza-paisaje-colorido-atardecer-nube_1203-5705.jpg?t=st=1712084228~exp=1712087828~hmac=2ef72ca07b7644163684d8c0acba9fd99fbbffc46f1daec23aa0492e5a6c339b&w=1380);
+    background-image: url(./images/nature-colorful-landscape-dusk-cloud.jpg);
     background-attachment: fixed;
     background-size: cover;
     padding: 50px;
