correccion error del menu hamburguesa

--- a/styles.css
+++ b/styles.css
@@ -4,270 +4,229 @@ h1,
 h2,
 h3,
 h4 {
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    font-size: 22px;
-    text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  font-size: 22px;
+  text-decoration: none;
 }
 
-
 .hamburger {
-    display: none; 
-    
+  display: none;
 }
 
 body,
 h1 {
-
-    font-weight: bold;
-    transition: transform 0.3s ease-in-out;
-
+  font-weight: bold;
+  transition: transform 0.3s ease-in-out;
 }
 
-
 nav {
-    background-color: rgb(3, 30, 80);
-    display: flex;
-    justify-content: center;
-    padding: 20px;
+  background-color: rgb(3, 30, 80);
+  display: flex;
+  justify-content: center;
+  padding: 20px;
 }
 
 nav img {
-    float: left;
-    height: 40px;
-    margin-right: 20px;
+  float: left;
+  height: 40px;
+  margin-right: 20px;
 }
 
 nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 nav ul li {
-    display: inline;
-    margin-right: 20px;
+  display: inline;
+  margin-right: 20px;
 }
 
 nav ul li a {
-    text-decoration: none;
-    color: white;
-    border-bottom: none;
+  text-decoration: none;
+  color: white;
+  border-bottom: none;
 }
-
 
 #home {
-    background-image: url(./images/nature-colorful-landscape-dusk-cloud.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    padding: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+  background-image: url(https://img.freepik.com/foto-gratis/cielo-colorido-despues-puesta-sol_661209-461.jpg?t=st=1712096057~exp=1712099657~hmac=5f675e67c271b22ec7180720b6c3c8d3b29b74a39784028fba1f45d8d6872a38&w=740);
+  background-attachment: fixed;
+  background-size: cover;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
-
 
 #destinations h3 {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 10px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
 }
 
-
 #contact {
-    background-color: brown;
-    color: white;
-    padding: 50px;
-    
-
+  background-color: brown;
+  color: white;
+  padding: 50px;
 }
 
 #avion {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    top: 50%;
-    left: 0;
-    transform: translate(-50%, -50%);
-    margin-top: 200px;
-
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  top: 50%;
+  left: 0;
+  transform: translate(-50%, -50%);
+  margin-top: 200px;
 }
 
 #carouselDestinations {
-    border: 1px solid #b6e8ff; 
-    border-radius: 0px; 
-    overflow: hidden; 
+  border: 1px solid #b6e8ff;
+  border-radius: 0px;
+  overflow: hidden;
 }
 
-
 #carouselDestinations .carousel-item img {
-    
-    max-width: 100%;
+  max-width: 100%;
 }
 
 #carouselDestinations .carousel-item {
-    height: auto;
+  height: auto;
 }
 
-
-
 footer {
-    background-color: black;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    height: auto;
+  background-color: black;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  height: auto;
 }
 
 @media screen and (min-width: 375px) and (max-width: 1366px) {
-    
-    nav {
+  nav {
+    padding: 60px;
+    position: relative;
+  }
 
-        padding: 60px;
-        position: relative;
-    }
+  body,
+  p,
+  h1,
+  h2,
+  h3,
+  h4 {
+    font-size: 10px;
+    margin: 1px;
+    margin-top: 5px;
+  }
 
+  nav img {
+    height: 30px;
+  }
 
+  nav ul {
+    flex-direction: column;
+    padding: 0;
+  }
 
-    body,
-    p,
-    h1,
-    h2,
-    h3,
-    h4 {
-        font-size: 10px; 
-        margin: 1px; 
-        margin-top: 5px;
-    }
+  nav ul li {
+    margin: 10px 0;
+  }
 
-
-    nav img {
-        height: 30px; 
-    }
-
-    nav ul {
-        flex-direction: column; 
-        padding: 0; 
-    }
-
-    nav ul li {
-        margin: 10px 0; 
-    }
-
-    nav ul li a {
-        padding: 50px; 
-    }
-
-    #carouselDestinations .carousel-item img {
-        max-width: 100%;
-        height: 180px;
-        
-    }
-
-    #destinations {
-
-        max-width: 100%;
-        height: 180px;
-
-        
-    }
-
-    #contact {
-
-        padding: 50px;
-    }
-
-    #home {
-        padding: 120px;
-    }
-
-    #home h2,
-    #home h3:nth-of-type(2) {
-        display: none;
-    }
-
-    #avion {
-        display: none;
-    }
-
-   .footer {
-
+  nav ul li a {
     padding: 50px;
+  }
 
-   }
+  #carouselDestinations .carousel-item img {
+    max-width: 100%;
+    height: 180px;
+  }
+
+  #destinations {
+    max-width: 100%;
+    height: 180px;
+  }
+
+  #contact {
+    padding: 50px;
+  }
+
+  #home {
+    padding: 120px;
+  }
+
+  #home h2,
+  #home h3:nth-of-type(2) {
+    display: none;
+  }
+
+  #avion {
+    display: none;
+  }
+
+  .footer {
+    padding: 50px;
+  }
 }
-
-
 
 @media screen and (max-width: 1366px) {
-    .menu {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 35%;
-        font-size: 9px;
-        overflow-y: auto;
-        background-color: rgba(0, 0, 0, 0.8);
-        padding: 20px;
-        box-sizing: border-box;
-        transform: translateX(-100%);
-        transition: transform 0.3s ease;
-        margin-top: 1px; 
-        padding-top: 0; 
-        z-index: 1000;
-    }
+  .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 35%;
+    font-size: 9px;
+    overflow-y: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    box-sizing: border-box;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    margin-top: 1px;
+    padding-top: 0;
+    z-index: 1000;
+  }
 
-    .menu.active {
-        transform: translateX(0);
-    }
+  .menu.active {
+    transform: translateX(0);
+  }
 
-    .menu li {
-        display: block;
-        margin-bottom: 5px;
-    }
+  .menu li {
+    display: block;
+    margin-bottom: 5px;
+  }
 
-    .menu li a {
-        display: block;
-        color: #fff;
-        text-decoration: none;
-        padding: 5px 0;
-        font-size: 14px;
-    }
+  .menu li a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    padding: 5px 0;
+    font-size: 14px;
+  }
 
-    
-    .hamburger-menu {
-        cursor: pointer;
-        display: flex;
-        flex-direction: column;
-        justify-content: center; 
-        align-items: center; 
-        width: 25px;
-        height: 20px;
-        z-index: 1000;
-        position: relative;
-    }
+  .hamburger-menu {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 20px;
+    z-index: 1000;
+    position: relative;
+  }
 
-    .bar {
-        width: 100%;
-        height: 2px;
-        background-color: white;
-        margin: 2px 0; 
-    }
+  .bar {
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    margin: 2px 0;
+  }
 }
-
-
-
-
-
-
-
-
-
-
