--- a/styles.css
+++ b/styles.css
@@ -208,6 +208,7 @@ footer {
     flex: 0 0 calc(50% - 15px);
     max-width: calc(50% - 15px);
     margin: 0 auto;
+    margin-top: 10px;
   }
 
   @media screen and (min-width: 375px) and (max-width: 1366px) {
