--- a/styles.css
+++ b/styles.css
@@ -173,14 +173,25 @@ footer {
   }
 
   #carouselDestinations .carousel-item img {
-    max-width: 100%;
+    width: 100vw; 
+    height: auto; 
+}
 
-  }
+#carouselDestinations .carousel-item {
+    width: 100vw; 
+    height: auto;
+}
 
-  #destinations {
-    max-width: 100%;
-    height: 180px;
-  }
+#carouselDestinations .carousel-inner {
+    width: 100%; 
+    height: auto;
+}
+
+#destinations {
+    width: 100vw; 
+    height: auto; 
+    
+}
 
 
   #contact {
@@ -188,7 +199,7 @@ footer {
   }
 
   #home {
-    padding: 120px;
+    padding: 160px;
   }
 
   #home h2,
@@ -208,7 +219,7 @@ footer {
     flex: 0 0 calc(50% - 15px);
     max-width: calc(50% - 15px);
     margin: 0 auto;
-    margin-top: 10px;
+    margin-top: 20px;
   }
 
   @media screen and (min-width: 375px) and (max-width: 1366px) {
@@ -275,7 +286,7 @@ footer {
 
 }
 
-@media screen and (max-width: 667px) {
+@media screen and (min-width: 375px) and (max-width: 667px) {
   .menu {
     position: fixed;
     top: 173px;
