--- a/styles.css
+++ b/styles.css
@@ -223,8 +223,8 @@ footer {
   }
 
   .quienes-somos .card {
-    flex: 0 0 calc(50% - 15px);
-    max-width: calc(50% - 15px);
+    flex: 1;
+    max-width: 100%;
     margin: 0 auto;
     margin-top: 20px;
   }
