--- a/styles.css
+++ b/styles.css
@@ -480,20 +480,20 @@ footer {
   }
 
   #a320 {
-    background-color: #f9f9f9; /* Color de fondo */
+    background-color: #f9f9f9; 
 }
 
 #a320 p {
-    text-align: justify; /* Justifica el texto */
+    text-align: justify; 
 }
 
 #a320 img:nth-of-type(1) {
   display: block;
 }
 
-/* Estilos para la sección Flota */
+
 #flota {
-    background-color: #f4f4f4; /* Color de fondo */
+    background-color: #f4f4f4; 
 }
 
 .tarjetas {
@@ -503,13 +503,13 @@ footer {
 }
 
 .tarjeta {
-    width: 300px; /* Ancho de la tarjeta */
-    margin: 0 20px 20px; /* Espacio alrededor de las tarjetas */
-    padding: 20px; /* Espacio interno de la tarjeta */
-    background-color: white; /* Color de fondo de la tarjeta */
-    border-radius: 10px; /* Bordes redondeados */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
-    text-align: justify; /* Justificar el texto */
+    width: 300px; 
+    margin: 0 20px 20px; 
+    padding: 20px; 
+    background-color: white; 
+    border-radius: 10px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    text-align: justify; 
 }
 
 .tarjeta h3 {
@@ -517,20 +517,20 @@ footer {
 }
 
 .tarjeta img {
-    width: 100%; /* Hace que la imagen ocupe todo el ancho de la tarjeta */
-    border-radius: 10px; /* Bordes redondeados para la imagen */
-    margin-bottom: 10px; /* Espacio inferior entre la imagen y el texto */
+    width: 100%; 
+    border-radius: 10px; 
+    margin-bottom: 10px; 
 }
 
 .tarjeta p {
-    margin-bottom: 10px; /* Espacio inferior entre párrafos */
+    margin-bottom: 10px; 
 }
 
-/* Estilos para la sección Video */
+
 #video iframe {
-    width: 100%; /* Establece el ancho al 100% */
-    height: 550px; /* Establece la altura deseada */
-    border: none; /* Elimina el borde del iframe */
+    width: 100%; 
+    height: 550px; 
+    border: none; 
 }
 
 }
@@ -669,12 +669,12 @@ footer {
 
   .nav-tabs {
     margin-bottom: 30px;
-    /* Espacio entre las pestañas y el contenido */
+    
   }
 
   .nav-tabs .nav-item {
     margin-bottom: 10px;
-    /* Ajustar el espacio entre los botones de pestañas */
+    
   }
 
 
